# GenAI-course-part1

./: README.md  main.py  pyproject.toml  requirements.txt
CineSage/: UIcore.py  core.py
chatmodels/: UI-Chatbot.py  chat.py  chatbot.py
