[project]
name = "basic-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
